--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -5,7 +5,7 @@ trigger:
 - master
 
 queue:
-  name: Default
+  name: Hosted VS2017
 steps:
 - powershell: |
     $InformationPreference = "Continue"
