--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -21,10 +21,10 @@ steps:
     git init ./release
     Push-Location ./release
     Write-Information $(Get-Location)
-    git remote add origin https://SQLHorizons:$($env:GITHUB_TOKEN)@github.com/SQLHorizons/.testBuild
-    git config gc.auto 0
-    git config --get-all http.https://github.com/SQLHorizons/.testBuild.extraheader
-    git config --get-all http.proxy
+    ##  git remote add origin https://SQLHorizons:$($env:GITHUB_TOKEN)@github.com/SQLHorizons/.testBuild
+    ##  git config gc.auto 0
+    ##  git config --get-all http.https://github.com/SQLHorizons/.testBuild.extraheader
+    ##  git config --get-all http.proxy
 
     ##  git -c http.extraheader="AUTHORIZATION: basic ***" fetch --tags --prune --progress --no-recurse-submodules origin
 
