--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -7,7 +7,7 @@ trigger:
 queue:
   name: Hosted VS2017
 steps:
-- powershell: '.\clone.ps1'
+- powershell: '.\clone.ps1 $env:GITHUB_TOKEN'
 
   workingDirectory: '$(System.DefaultWorkingDirectory)'
 
